--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "adm-zip": "^0.4.7",
     "async": "^2.0.0",
     "autoprefixer": "^6.3.7",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-compress": "^1.3.0",
@@ -43,6 +46,10 @@
     "sqlite3": "^3.1.4",
     "uglify-js": "^2.7.0",
     "underscore": "^1.8.3",
-    "unzip": "^0.1.11"
+    "unzip": "^0.1.11",
+    "webpack": "^1.13.1"
+  },
+  "dependencies": {
+    "angular": "^1.5.8"
   }
 }
